--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Medbikri Technologies Internship Submission by Kunal Keshan",
 	"main": "app.js",
 	"scripts": {
+		"build": "npm install",
 		"start": "node app.js",
 		"dev": "nodemon app.js"
 	},
