--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
 		"nodemon": "^2.0.15"
 	},
 	"dependencies": {
+		"agenda": "^4.2.1",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
+		"googleapis": "^100.0.0",
 		"mongoose": "^6.3.0"
 	}
 }
