--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
 	},
 	"dependencies": {
 		"agenda": "^4.2.1",
+		"axios": "^0.26.1",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
-		"googleapis": "^100.0.0",
 		"mongoose": "^6.3.0"
 	}
 }
